--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <script src="https://kit.fontawesome.com/acf35067e0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/slash.png">
+    <title>[Anselme S]</title>
 </head>
 <body>
     <nav>
         <div id="header">
-            <a id="pro" class="tab" href="#projects">projects</a>
-            <a id="exp" class="tab" href="#experiences">experiences</a>
-            <a id="ski" class="tab" href="#skills">skills</a>
+            <a id="pro" class="tab" href="#projects">[projects]</a>
+            <a id="exp" class="tab" href="#experiences">[experiences]</a>
+            <a id="ski" class="tab" href="#skills">[skills]</a>
         </div>
     </nav>
     <hero>
@@ -35,25 +36,24 @@
         </div>
     </hero>
 
-    <holder id="projects">
+    <holder id="projects" class="odd">
         <div class="portion">PROJECTS</div>
-        <div class="cards" id="procards">
-
-        </div>
+        <div class="cards" id="procards"></div>
     </holder>
 
-    <holder id="experiences">
+    <holder id="experiences" class="even">
         <div class="portion">EXPERIENCES</div>
-        <div class="cards" id="expcards">
-            
-        </div>
+        <div class="cards" id="expcards"></div>
     </holder>
 
-    <holder id="skills">
+    <holder id="skills" class="odd">
         <div class="portion">SKILLS</div>
-        <div class="cards" id="skicards">
-        </div>
+        <div class="cards" id="skicards"></div>
     </holder>
+
+    <footer>
+        <div>Thanks for looking!</div>
+    </footer>
 
     <script src="./script.js"></script>
 </body>
