--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <nav>
         <div id="header">
-            <a id="pro" class="tab" href="#projects">[projects]</a>
-            <a id="exp" class="tab" href="#experiences">[experiences]</a>
-            <a id="ski" class="tab" href="#skills">[skills]</a>
+            <a id="pro" class="tab" href="#projects">projects</a>
+            <a id="exp" class="tab" href="#experiences">experiences</a>
+            <a id="ski" class="tab" href="#skills">skills</a>
         </div>
     </nav>
     <hero>
@@ -48,11 +48,16 @@
 
     <holder id="skills" class="odd">
         <div class="portion">SKILLS</div>
+        <div>Starting / Somewhat Good / Good / Very Good / Excellent</div>
         <div class="cards" id="skicards"></div>
     </holder>
 
     <footer>
         <div>Thanks for looking!</div>
+        <div id="links">
+            <i class="goto fa-brands fa-github"></i>
+            <i class="goto fa-solid fa-envelope"></i>
+        </div>
     </footer>
 
     <script src="./script.js"></script>
