--- a/projects/bot.html
+++ b/projects/bot.html
@@ -14,10 +14,10 @@
     <nav>
         <div id="header">
             <a class="fa-solid fa-chevron-left animate__animated animate__shakeX animate__delay-4s animate__slower" style="text-align: left;" href="../index.html#projects"></a>
-            <a id="pro" class="tab" href="#exp">[explanation]</a>
-            <a id="exp" class="tab" href="#one">[sample 1]</a>
-            <a id="ski" class="tab" href="#two">[sample 2]</a>
-            <a id="ski" class="tab" href="#three">[sample 3]</a>
+            <a id="pro" class="tab" href="#exp">explanation</a>
+            <a id="exp" class="tab" href="#one">sample 1</a>
+            <a id="ski" class="tab" href="#two">sample 2</a>
+            <a id="ski" class="tab" href="#three">sample 3</a>
         </div>
     </nav>
     <hero>
@@ -49,7 +49,11 @@
         <div class="portion">Code Sample 2</div>
         <divider>
             <div class="divide" style="text-align: right;">
-                This is the exp
+                <p>This code takes every commands of the bot and push the information of the commands in docs.
+                    Each command has a name, a description, and a type. The for each loop seeks for each of those fields for each commands and put them into the prompt.
+                    Then it pushes the filled prompt into the array docs.</p>
+                <p>The docs is used to get all the information about the commands at once. Like this users can see all the available commands and know what they do.</p>
+                <p>It uses a for each that takes fields from a dictionary in javascript and usesd the push method to put the informations inside the array.</p>
             </div>
 
             <img class="divide" src="../img/discord2.png">
@@ -62,7 +66,7 @@
             <img class="divide" src="../img/discord3.png">
 
             <div class="divide">
-                This is the exp
+                <p>This code takes </p>
             </div>
         </divider>
     </holder>
