--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@
     </holder>
 
     <footer>
-        <div>Thanks for looking!</div>
-        <div id="links">
-            <i class="goto fa-brands fa-github"></i>
-            <i class="goto fa-solid fa-envelope"></i>
+        <div class="space">
+            <p>Thanks for looking!</p>
+            <p>Check my github or communicate!</p>
+        </div>
+        <div id="links" class="space">
+            <a class="goto fa-brands fa-github" href="https://github.com/zer0less"></a>
+            <a class="goto fa-solid fa-envelope" href="mailto:asorinus@gmail.com"></a>
         </div>
     </footer>
 
