--- a/projects/sc.html
+++ b/projects/sc.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/acf35067e0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css" />
     <link rel="icon" type="image/png" sizes="16x16" href="../img/slash.png">
-    <title>[Anselme - Snippets Master]</title>
+    <title>[Anselme - Discord Bot]</title>
 </head>
 <body>
     <nav>
@@ -17,46 +17,32 @@
             <a id="pro" class="tab" href="#exp">explanation</a>
             <a id="exp" class="tab" href="#one">sample 1</a>
             <a id="ski" class="tab" href="#two">sample 2</a>
+            <a id="ski" class="tab" href="#three">sample 3</a>
         </div>
     </nav>
     <hero>
         <div id="name">Discord Bot</div>
-        <p>This is a Visual Studio Code snippets extension made with JSON and Yo</p>
-        <a href="https://marketplace.visualstudio.com/items?itemName=SlashDEV.snippet-master" target="_blank">Snippets Master</a>
+        <p>A Stylesheet with most of the available properties as a class</p>
+        <a href="https://slashpack.vercel.app/shortcut/cssSC.css" target="_blank">CSS ShortCuts</a>
     </hero>
 
     <holder id="exp" class="odd">
         <div class="portion">Explanation</div>
-        <p>Snippets Master is an extension for VS Code that makes snippets for multiple languages for users to use and go faster while coding.</p>
-        <p></p>
+        <p>A Stylesheet with a name for properties from flex to cursor to font.</p>
+        <p>There are some elements where users only want to put one or two properties, this helps make the property be matched to the element by class name instead of having space taken in the css file or space.</p>
     </holder>
 
     <holder id="one" class="even">
         <div class="portion">Code Sample 1</div>
         <divider>
-            <img class="divide" src="../img/sm1.png">
+            <img class="divide" src="../img/sc1.png">
 
             <div class="divide">
-                <p>This is the syntax and look for one snippet. There is a scope, a prefix, a body, and a description.
-                The scope is which language(s) the snippet will appear in.
-                The prefix is the word to type in the editor to get the snippet.
-                The body is what the snippet is a shortcut for: the body will appear after typing the prefix.
-                The description is what is the snippet</p>
-                <p>This snippet makes an if statement for JavaScript when the user types "jsif"</p>
-                <p>These snippets are made in a special JSON file called .code-snippets for VS Code</p>
+                <p>This sample is most of the Shortcut file but not all. It is meant to make you see that there are lots of properties as for right and in the future.</p>
+                <p>They are all class names so that they can be used multiple times in the same page and they are also easily accessible.</p>
+                <p>Every class name are meant to be as small as possible while still keeping the name describing the property.</p>
+                <p>All this file is made only in CSS and works perfectly and better than intended.</p>
             </div>
-        </divider>
-    </holder>
-
-    <holder id="two" class="odd">
-        <div class="portion">Code Sample 2</div>
-        <divider>
-            <div class="divide" style="text-align: right;">
-                <p>This is a readme file for GitHub. It contains information about Snippets Master including a list of all the available languages.</p>
-                <p>This permits for an user to know what they can and can't use with this extension.</p>
-            </div>
-
-            <img class="divide" src="../img/sm2.png">
         </divider>
     </holder>
 
