--- a/projects/sc.html
+++ b/projects/sc.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/acf35067e0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css" />
     <link rel="icon" type="image/png" sizes="16x16" href="../img/slash.png">
-    <title>[Anselme - Discord Bot]</title>
+    <title>Anselme - CSS ShortCuts</title>
 </head>
 <body>
     <nav>
@@ -16,12 +16,10 @@
             <a class="fa-solid fa-chevron-left animate__animated animate__shakeX animate__delay-4s animate__slower" style="text-align: left;" href="../index.html#projects"></a>
             <a id="pro" class="tab" href="#exp">explanation</a>
             <a id="exp" class="tab" href="#one">sample 1</a>
-            <a id="ski" class="tab" href="#two">sample 2</a>
-            <a id="ski" class="tab" href="#three">sample 3</a>
         </div>
     </nav>
     <hero>
-        <div id="name">Discord Bot</div>
+        <div id="name">CSS ShortCut</div>
         <p>A Stylesheet with most of the available properties as a class</p>
         <a href="https://slashpack.vercel.app/shortcut/cssSC.css" target="_blank">CSS ShortCuts</a>
     </hero>
@@ -29,7 +27,9 @@
     <holder id="exp" class="odd">
         <div class="portion">Explanation</div>
         <p>A Stylesheet with a name for properties from flex to cursor to font.</p>
-        <p>There are some elements where users only want to put one or two properties, this helps make the property be matched to the element by class name instead of having space taken in the css file or space.</p>
+        <p>There are some elements where users only want to put one or two properties, this helps make the property be matched to the element by class name instead of having space taken in the css file or space.
+            It has the properties from the groups: flex, justify, align, float, display, position, list, border, text, font, color, background, and cursor. And more will be added!
+        </p>
     </holder>
 
     <holder id="one" class="even">
