--- a/projects/sm.html
+++ b/projects/sm.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/acf35067e0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css" />
     <link rel="icon" type="image/png" sizes="16x16" href="../img/slash.png">
-    <title>[Anselme - Snippets Master]</title>
+    <title>Anselme - Snippets Master</title>
 </head>
 <body>
     <nav>
@@ -54,6 +54,9 @@
             <div class="divide" style="text-align: right;">
                 <p>This is a readme file for GitHub. It contains information about Snippets Master including a list of all the available languages.</p>
                 <p>This permits for an user to know what they can and can't use with this extension.</p>
+                <p>GitHub and Git are used to make this extension accessible. The repository lies in GitHub so that people can see that extension.
+                    The project has a README file, a CHANGELOG file, and a a LICENSE file.
+                </p>
             </div>
 
             <img class="divide" src="../img/sm2.png">
