--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <script src="https://kit.fontawesome.com/acf35067e0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://slashpack.vercel.app/shortcut/cssSC.css">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/slash.png">
-    <title>[Anselme S]</title>
+    <title>Anselme</title>
 </head>
 <body>
     <nav>
@@ -38,6 +39,7 @@
 
     <holder id="projects" class="odd">
         <div class="portion">PROJECTS</div>
+        <div>Click them and learn more!</div>
         <div class="cards" id="procards"></div>
     </holder>
 
@@ -63,6 +65,7 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
     <script src="./script.js"></script>
 </body>
 </html>
