--- a/projects/bot.html
+++ b/projects/bot.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/acf35067e0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css" />
     <link rel="icon" type="image/png" sizes="16x16" href="../img/slash.png">
-    <title>[Anselme - Discord Bot]</title>
+    <title>Anselme - Discord Bot</title>
 </head>
 <body>
     <nav>
