--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
-    <script src="./script.js"></script>
+    <script src="./script/script.js"></script>
+    <script src="./script/lax.js"></script>
 </body>
 </html>
