--- a/projects/sc.html
+++ b/projects/sc.html
@@ -57,5 +57,8 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
+    <script src="./../script/script.js"></script>
+    <script src="./../script/lax.js"></script>
 </body>
 </html>
