--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div class="animate__animated animate__backInLeft animate__delay-2s">Editor</div>
             <div class="animate__animated animate__backInRight animate__delay-3s">Gamer</div>
         </div>
+        <img id="arrow" src="./img/arrow.png"></img>
     </hero>
 
     <holder id="projects" class="odd">
