--- a/projects/bot.html
+++ b/projects/bot.html
@@ -23,6 +23,7 @@
     <hero>
         <div id="name">Discord Bot</div>
         <p>This bot for Discord was made with JavaScript, JSON, and Discord.js API.</p>
+        <img id="arrow" src="./../img/arrow.png"></img>
     </hero>
 
     <holder id="exp" class="odd">
@@ -90,7 +91,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
-    <script src="./../script/script.js"></script>
     <script src="./../script/lax.js"></script>
 </body>
 </html>
