--- a/projects/sm.html
+++ b/projects/sm.html
@@ -23,6 +23,7 @@
         <div id="name">Discord Bot</div>
         <p>This is a Visual Studio Code snippets extension made with JSON and Yo</p>
         <a href="https://marketplace.visualstudio.com/items?itemName=SlashDEV.snippet-master" target="_blank">Snippets Master</a>
+        <img id="arrow" src="./../img/arrow.png"></img>
     </hero>
 
     <holder id="exp" class="odd">
@@ -75,7 +76,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
-    <script src="./../script/script.js"></script>
     <script src="./../script/lax.js"></script>
 </body>
 </html>
