--- a/projects/sc.html
+++ b/projects/sc.html
@@ -22,6 +22,7 @@
         <div id="name">CSS ShortCut</div>
         <p>A Stylesheet with most of the available properties as a class</p>
         <a href="https://slashpack.vercel.app/shortcut/cssSC.css" target="_blank">CSS ShortCuts</a>
+        <img id="arrow" src="./../img/arrow.png"></img>
     </hero>
 
     <holder id="exp" class="odd">
@@ -58,7 +59,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/lax.js" ></script>
-    <script src="./../script/script.js"></script>
     <script src="./../script/lax.js"></script>
 </body>
 </html>
