--- a/projects/sc.html
+++ b/projects/sc.html
@@ -14,7 +14,7 @@
     <nav>
         <div id="header">
             <a class="fa-solid fa-chevron-left animate__animated animate__shakeX animate__delay-4s animate__slower" style="text-align: left;" href="../index.html#projects"></a>
-            <a id="pro" class="tab" href="#exp">explanation</a>
+            <a id="pro" class="tab" href="#explanation">explanation</a>
             <a id="exp" class="tab" href="#one">sample 1</a>
         </div>
     </nav>
@@ -25,12 +25,13 @@
         <img id="arrow" src="./../img/arrow.png"></img>
     </hero>
 
-    <holder id="exp" class="odd">
+    <holder id="explanation" class="odd">
         <div class="portion">Explanation</div>
         <p>A Stylesheet with a name for properties from flex to cursor to font.</p>
         <p>There are some elements where users only want to put one or two properties, this helps make the property be matched to the element by class name instead of having space taken in the css file or space.
             It has the properties from the groups: flex, justify, align, float, display, position, list, border, text, font, color, background, and cursor. And more will be added!
         </p>
+        <p>This stylesheet was made for me to be able to have fast CSS properties but I decided to share it with the world. Anyone can use it as long as they say it's theirs</p>
     </holder>
 
     <holder id="one" class="even">
@@ -42,7 +43,9 @@
                 <p>This sample is most of the Shortcut file but not all. It is meant to make you see that there are lots of properties as for right and in the future.</p>
                 <p>They are all class names so that they can be used multiple times in the same page and they are also easily accessible.</p>
                 <p>Every class name are meant to be as small as possible while still keeping the name describing the property.</p>
-                <p>All this file is made only in CSS and works perfectly and better than intended.</p>
+                <p>All this file is made only in CSS and works perfectly and better than intended. All you have to do is write the name into a class attribute and voila.
+                     The property is now added to the element.
+                </p>
             </div>
         </divider>
     </holder>
