--- a/projects/sm.html
+++ b/projects/sm.html
@@ -14,7 +14,7 @@
     <nav>
         <div id="header">
             <a class="fa-solid fa-chevron-left animate__animated animate__shakeX animate__delay-4s animate__slower" style="text-align: left;" href="../index.html#projects"></a>
-            <a id="pro" class="tab" href="#exp">explanation</a>
+            <a id="pro" class="tab" href="#explanation">explanation</a>
             <a id="exp" class="tab" href="#one">sample 1</a>
             <a id="ski" class="tab" href="#two">sample 2</a>
         </div>
@@ -26,10 +26,12 @@
         <img id="arrow" src="./../img/arrow.png"></img>
     </hero>
 
-    <holder id="exp" class="odd">
+    <holder id="explanation" class="odd">
         <div class="portion">Explanation</div>
         <p>Snippets Master is an extension for VS Code that makes snippets for multiple languages for users to use and go faster while coding.</p>
-        <p></p>
+        <p>It uses the VS API to make the snippets available in the users' snippets list. I made this extension so that people can code faster and also mostly for myself.
+            It felt like it was a good project to do.
+        </p>
     </holder>
 
     <holder id="one" class="even">
@@ -52,12 +54,13 @@
     <holder id="two" class="odd">
         <div class="portion">Code Sample 2</div>
         <divider>
-            <div class="divide" style="text-align: right;">
+            <div class="divide">
                 <p>This is a readme file for GitHub. It contains information about Snippets Master including a list of all the available languages.</p>
                 <p>This permits for an user to know what they can and can't use with this extension.</p>
                 <p>GitHub and Git are used to make this extension accessible. The repository lies in GitHub so that people can see that extension.
                     The project has a README file, a CHANGELOG file, and a a LICENSE file.
                 </p>
+                <p>This extension uses the vsce command to publish itself to the marketplace. This package.json holds all the information needed so that the extension handler knows how the extension works.</p>
             </div>
 
             <img class="divide" src="../img/sm2.png">
