--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
     <hero>
         <div>Hello, my name is</div>
         <div id="name">
-            <div class="animate__animated animate__bounce animate__delay-1s">A</div>
-            <div class="animate__animated animate__bounce animate__delay-2s">N</div>
-            <div class="animate__animated animate__bounce animate__delay-3s">S</div>
-            <div class="animate__animated animate__bounce animate__delay-4s">E</div>
-            <div class="animate__animated animate__bounce animate__delay-3s">L</div>
-            <div class="animate__animated animate__bounce animate__delay-2s">M</div>
-            <div class="animate__animated animate__bounce animate__delay-1s">E</div>
+            <div class="animate__animated animate__bounce animate__delay-1s">Z</div>
+            <div class="animate__animated animate__bounce animate__delay-2s">E</div>
+            <div class="animate__animated animate__bounce animate__delay-3s">R</div>
+            <div class="animate__animated animate__bounce animate__delay-4s">0</div>
         </div>
         <div id="desc">
             <div class="animate__animated animate__backInDown animate__delay-1s">Coder</div>
@@ -62,7 +59,7 @@
         </div>
         <div id="links" class="space">
             <a class="goto fa-brands fa-github" href="https://github.com/zer0less"></a>
-            <a class="goto fa-solid fa-envelope" href="mailto:asorinus@gmail.com"></a>
+            <a class="goto fa-solid fa-envelope" href="mailto:zer0lessmain@gmail.com"></a>
         </div>
     </footer>
 
