--- a/projects/ds.html
+++ b/projects/ds.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/acf35067e0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css" />
     <link rel="icon" type="image/png" sizes="16x16" href="../img/slash.png">
-    <title>Anselme - Snippets Master</title>
+    <title>Zer0 - Dev Space</title>
 </head>
 <body>
     <nav>
@@ -20,15 +20,15 @@
         </div>
     </nav>
     <hero>
-        <div id="name">Discord Bot</div>
+        <div id="name">Dev Space</div>
         <p>This is a Visual Studio Code snippets extension made with JSON and Yo</p>
-        <a href="https://marketplace.visualstudio.com/items?itemName=SlashDEV.snippet-master" target="_blank">Snippets Master</a>
+        <a href="https://marketplace.visualstudio.com/items?itemName=SlashDEV.devspace" target="_blank">Dev Space</a>
         <img id="arrow" src="./../img/arrow.png"></img>
     </hero>
 
     <holder id="explanation" class="odd">
         <div class="portion">Explanation</div>
-        <p>Snippets Master is an extension for VS Code that makes snippets for multiple languages for users to use and go faster while coding.</p>
+        <p>Dev Space is an extension for VS Code that was created primarily for snippets for multiple languages for users to use and go faster while coding. But now it goes into themes and keybindings.</p>
         <p>It uses the VS API to make the snippets available in the users' snippets list. I made this extension so that people can code faster and also mostly for myself.
             It felt like it was a good project to do.
         </p>
@@ -37,7 +37,7 @@
     <holder id="one" class="even">
         <div class="portion">Code Sample 1</div>
         <divider>
-            <img class="divide" src="../img/sm1.png">
+            <img class="divide" src="../img/ds1.png">
 
             <div class="divide">
                 <p>This is the syntax and look for one snippet. There is a scope, a prefix, a body, and a description.
@@ -63,7 +63,7 @@
                 <p>This extension uses the vsce command to publish itself to the marketplace. This package.json holds all the information needed so that the extension handler knows how the extension works.</p>
             </div>
 
-            <img class="divide" src="../img/sm2.png">
+            <img class="divide" src="../img/ds2.png">
         </divider>
     </holder>
 
@@ -74,7 +74,7 @@
         </div>
         <div id="links" class="space">
             <a class="goto fa-brands fa-github" href="https://github.com/zer0less"></a>
-            <a class="goto fa-solid fa-envelope" href="mailto:asorinus@gmail.com"></a>
+            <a class="goto fa-solid fa-envelope" href="mailto:zer0lessmain@gmail.com"></a>
         </div>
     </footer>
 
