--- a/projects/sc.html
+++ b/projects/sc.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/acf35067e0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../style.css" />
     <link rel="icon" type="image/png" sizes="16x16" href="../img/slash.png">
-    <title>Anselme - CSS ShortCuts</title>
+    <title>Zer0 - CSS ShortCuts</title>
 </head>
 <body>
     <nav>
@@ -57,7 +57,7 @@
         </div>
         <div id="links" class="space">
             <a class="goto fa-brands fa-github" href="https://github.com/zer0less"></a>
-            <a class="goto fa-solid fa-envelope" href="mailto:asorinus@gmail.com"></a>
+            <a class="goto fa-solid fa-envelope" href="mailto:zer0lessmain@gmail.com"></a>
         </div>
     </footer>
 
