--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="https://slashpack.vercel.app/shortcut/cssSC.css">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/slash.png">
-    <title>Anselme</title>
+    <title>Zer0</title>
 </head>
 <body>
     <nav>
